# openpose

./: .gitattributes  .gitignore  CMakeLists.txt
datas/calibration/test01/: camera01.xml  camera02.xml
datas/calibration/test02/: camera01.xml  camera02.xml
datas/camera_params/panoptic/dance2/: calibration.json
datas/camera_params/panoptic/dance2/results/: 00_04.xml  00_05.xml  00_06.xml  00_07.xml  00_08.xml  00_09.xml  00_10.xml  00_11.xml  00_12.xml  00_13.xml  00_14.xml  00_15.xml  00_16.xml  00_17.xml  00_18.xml  00_19.xml  00_20.xml  00_21.xml  00_22.xml  00_23.xml  00_24.xml  00_25.xml  00_26.xml  00_27.xml  00_28.xml  00_29.xml  00_30.xml  00_31.xml
datas/camera_params/panoptic/ultimatum1/: calibration.json
datas/camera_params/panoptic/ultimatum1/results/: 00_00.xml  00_01.xml  00_02.xml  00_03.xml  00_04.xml  00_05.xml  00_06.xml  00_07.xml  00_08.xml  00_09.xml  00_10.xml  00_11.xml  00_12.xml  00_13.xml  00_14.xml  00_15.xml  00_16.xml  00_17.xml  00_18.xml  00_19.xml  00_20.xml  00_21.xml  00_22.xml  00_23.xml  00_24.xml  00_25.xml  00_26.xml  00_27.xml  00_28.xml  00_29.xml  00_30.xml
datas/pose_tasks/HikvCamera01/: config.json
datas/pose_tasks/MindCamera01/: config.json
datas/pose_tasks/MindCamera01/calibration/: 042050820525.xml  043021920324.xml  044022222074.xml  044022222076.xml
datas/pose_tasks/VideoDir01/: config.json
datas/pose_tasks/VideoDir01/calibration/: 00_01.xml
datas/pose_tasks/VideoFile01/: config.json
datas/pose_tasks/VideoFile01/calibration/: 00_00.xml  00_02.xml  00_03.xml
examples/: CMakeLists.txt
examples/HumanPoseShow/: CMakeLists.txt
examples/HumanPoseShow/HumanPoseShow/: CMakeLists.txt  CameraCalibWidget.cpp  CameraCalibWidget.h  CameraCalibWidget.ui  CommonUtils.h  DialogAlgoConfig.cpp  DialogAlgoConfig.h  DialogAlgoConfig.ui  DialogInputConfig.cpp  DialogInputConfig.h  DialogInputConfig.ui  DialogOutputConfig.cpp  DialogOutputConfig.h  DialogOutputConfig.ui  DialogTaskList.cpp  DialogTaskList.h  DialogTaskList.ui  HumanPoseProcessor.cpp  HumanPoseProcessor.h  HumanPoseShow.qrc  HumanPoseShow_zh_CN.ts  LayoutPageWidget.h  MindCameraConfig.h  MindCameraConfig.ui  PoseRenderWidget.cpp  PoseRenderWidget.h  VideoGroupWidget.cpp  VideoItemWidget.cpp  VideoItemWidget.h  main.cpp  mainwindow.cpp  mainwindow.h
examples/calibration/: CMakeLists.txt  calibration.cpp
examples/openpose/: CMakeLists.txt  openpose.cpp
examples/openpose_ui/: CMakeLists.txt
examples/openpose_ui/HumanPoseShow/: CMakeLists.txt  CommonUtils.cpp  HumanPoseProcessor.cpp  HumanPoseProcessor.h  HumanPoseShow.qrc  HumanPoseShow_zh_CN.ts  LayoutPageWidget.cpp  LayoutVideoWidget.cpp  LayoutVideoWidget.h  MindCameraConfig.cpp  StereoPoseRender.cpp  StereoPoseRender.hpp  VideoGroupWidget.cpp  VideoGroupWidget.h  VideoItemWidget.cpp  VideoItemWidget.h  capturethread.cpp  main.cpp  mainwindow.cpp  mainwindow.h
examples/tests/: CMakeLists.txt  sendMessage.cpp
include/openpose/: flags.hpp
include/openpose/calibration/: cameraParameterEstimation.hpp
include/openpose/core/: common.hpp  ctpl_stl.hpp
include/openpose/filestream/: fileSaver.hpp  fileStream.hpp  imageSaver.hpp  messageIO.hpp  videoSaver.hpp
include/openpose/pose/: poseExtractor.hpp  poseExtractorCaffe.hpp  poseExtractorNet.hpp  wPoseExtractor.hpp
include/openpose/producer/: enumClasses.hpp  headers.hpp  hikvReader.hpp  mindReader.hpp  producer.hpp  stereoVideoReader.hpp  videoCaptureReader.hpp  videoFrameSorter.hpp  wDatumProducer.hpp
include/openpose/utilities/: enumClasses.hpp  fileSystem.hpp  flagsToOpenPose.hpp
include/openpose/wrapper/: wrapperAuxiliary.hpp  wrapperStructInput.hpp  wrapperStructOutput.hpp
scripts/: human_pose_show.sh
src/openpose/3d/: poseTriangulation.cpp
src/openpose/calibration/: cameraParameterEstimation.cpp  gridPatternFunctions.cpp
src/openpose/core/: CMakeLists.txt  ctpl_stl.cpp
src/openpose/filestream/: CMakeLists.txt  imageSaver.cpp  messageIO.cpp  videoSaver.cpp
src/openpose/gui/: frameDisplayer.cpp  guiInfoAdder.cpp
src/openpose/pose/: poseExtractor.cpp  poseExtractorCaffe.cpp
src/openpose/producer/: CMakeLists.txt  datumProducer.cpp  hikvReader.cpp  mindReader.cpp  producer.cpp  stereoVideoReader.cpp  videoCaptureReader.cpp  videoFrameSorter.cpp
src/openpose/utilities/: fileSystem.cpp  flagsToOpenPose.cpp
src/openpose/wrapper/: wrapperStructInput.cpp  wrapperStructOutput.cpp
tools/: convert_data.py  openpose_2d.sh  openpose_3d.sh
tools/calibaration/: capture_images.sh  estimate_campose.sh  estimate_extrinsics.sh  estimate_intrinsics.sh  refine_extrinsics.sh  undistort_images.sh
tools/dataprocess/: convert_data.py
tools/hikv_camera/: openpose_2d.sh  openpose_3d.sh
tools/install_package/: install_dependencies.sh
tools/mind_camera/: openpose_2d.sh  openpose_3d.sh
tools/openpose/hikv_camera/: openpose_2d.sh
tools/openpose/mind_camera/: openpose_2d.sh  openpose_3d.sh
tools/openpose/video_file/: openpose_2d.sh  openpose_3d.sh
web/html/doc/: index.html  md_doc_02_output.html  md_doc_09_authors_and_contributors.html  md_doc_10_community_projects.html  md_doc_installation_1_prerequisites.html  md_doc_installation_2_additional_settings.html  md_doc_installation_deprecated_installation_deprecated.html
